# llm-foundation

./: .gitignore
llm-foundation/: .gitignore  LICENSE.md  README.md  adaptation_logs.json  amharic_oromiffa_demo.py  build_neural_nets_structure.sh  build_transformer_structure.sh  demo_neural_nets.py  pyproject.toml  requirements.txt  requirements_neural_nets.txt  run_self_adapt.py  run_self_adapt_am_om.py  run_self_adapt_from_tsv.py  run_training_pipeline.py  run_transformer_pipeline.py  test_transformer_interactive.py
llm-foundation/configs/: transformer_am_om.json
llm-foundation/docs/: CHECKPOINT_1_SUMMARY.md  CHECKPOINT_5_SUMMARY.md  CHECKPOINT_6_SUMMARY.md  COMPLETE_PROJECT_SUMMARY.md  NETWORKX_VISUALIZATION_GUIDE.md
llm-foundation/scripts/: build_attention_structure.sh  build_complete_transformer.sh  build_neural_nets_structure.sh  build_rnn_lstm_structure.sh  demo_networkx_visualization.py  demo_neural_nets.py  prepare_am_om_data.py  run_attention_pipeline.py  run_branch_pipelines.ps1  run_checkpoint_5_6_integration.py  run_data_preparation_pipeline.py  run_real_data_tests.py  save_plots.py  simple_networkx_example.py  test_attention_pipeline.py  train_am_om.py  visualize_rnn.py
llm-foundation/src/api/: __init__.py
llm-foundation/src/complete_transformer/: __init__.py
llm-foundation/src/data/: am_om_dataset.py  dataloader.py  (+2 more)
llm-foundation/test/: test_colorbar_fix.py  test_networkx_visualization.py  test_visualization_backend.py
llm-foundation/tests/: test_data_preparation.py  test_neural_nets.py  test_transformer_core.py  test_transformer_masks.py
(+57 files in other folders)
