[tool.poetry]
name = "llm-foundation"
version = "0.1.0"
description = "LLM Foundation Course - Week 2 Workshop"
authors = ["Natnael Kebede - debel.k.natnael@proton.me>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
numpy = "^1.21.0"
pandas = "^1.3.0"
matplotlib = "^3.5.0"
seaborn = "^0.11.0"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
gradio = "^3.40.0"
transformers = "^4.30.0"
tokenizers = "^0.13.0"
datasets = "^2.12.0"
tqdm = "^4.65.0"
wandb = "^0.15.0"
networkx = ">=2.6.0,<3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 